# twag

./: .gitignore  .gitmessage  .roadmap.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  DEPENDENCY_RISK.md  DEPENDENCY_RISKS.md  INSTALL.md  LICENSE  PII_SCAN_REPORT.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  SUGGESTED_CRON_SCHEDULE.md  TELEGRAM_DIGEST_FORMAT.md  TEST_GAPS.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/twag/: SKILL.md
.clawdhub/: origin.json
.githooks/: commit-msg
.github/: release.yml
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: PRIVACY.md  README.md  architecture.md  cli.md  database.md  metrics.md  test_flakiness_report.md  web-api.md
scripts/: analyze_test_flakiness.py  benchmark_parallelism.py  bus_factor.py  check_doc_drift.py  check_privacy.py  commit-msg-hook.sh  cron-runner.sh  dependency_risk.py  dependency_risk_scan.sh  install-hooks.sh  knowledge_silo.py  knowledge_silo_report.py  migrate.sh  pii_scan.py  roadmap_entropy.py  semantic_diff.py  setup-hooks.sh  test_models.py
scripts/hooks/: commit-msg  pre-commit
skills/twag/: SKILL.md
skills/twag/.clawdhub/: origin.json
tests/: __init__.py  conftest.py  test_analyze_context_storage.py  test_api_contracts.py  test_article_processing.py  test_article_sections.py  test_article_visuals.py  test_auth.py  test_backward_compat.py  test_backward_compatibility_api.py  test_backward_compatibility_cli.py  test_backward_compatibility_config.py  test_backward_compatibility_db.py  test_bus_factor.py  test_cli_analyze_status.py  test_cli_doctor.py  test_cli_fetch_status.py  test_cli_logging.py  test_cli_process_status.py  test_cli_search.py  test_config.py  test_costs.py  test_cron_runner.py  test_db_accounts.py  test_db_context_commands.py  test_db_dump_restore.py  test_db_narratives.py  test_db_prompts.py  test_db_reactions.py  test_db_retweet_backfill.py  test_db_schema_evolution.py  test_db_signal_migration.py  test_db_time_utils.py  test_dependency_risk.py  test_diff.py  test_doc_drift.py  test_entropy.py  test_evaluation.py  test_fetcher.py  test_flakiness_analyzer.py  (+36 more)
tests/db/: test_schema_advisor.py
tests/eval/: golden.jsonl
tests/fixtures/: tweet_2019488673935552978.json
tmp/: bus_factor_report.md  knowledge-silo-report.md  semantic-diff-2026-04-03.md  semantic-diff.md
twag/: __init__.py  _compat.py  article_sections.py  article_visuals.py  auth.py  bus_factor.py  cli.py  config.py  costs.py  db.py  entropy.py  evaluation.py  fetcher.py  link_utils.py  logging_config.py  logging_setup.py  media.py  metric_names.py  metrics.py  metrics_coverage.py  notifier.py  processor.py  registry.py  renderer.py  scorer.py  search_classify_worker.py  search_live.py  spine.py  tables.py  taxonomy.py  text_utils.py
twag/cli/: __init__.py  _console.py  _helpers.py  _logging.py  _progress.py  accounts.py  analyze.py  config_cmd.py  costs_cmd.py  db_cmd.py  diff.py  diff_cmd.py  digest.py  entropy.py  eval_cmd.py  fetch.py  inference.py  init_cmd.py  metrics_cmd.py  narratives.py  process.py  search.py  spine.py  stats.py  web.py
twag/db/: __init__.py  accounts.py  alerts.py  connection.py  context_commands.py  costs.py  inference.py  maintenance.py  media_cache.py  migrations.py  narratives.py  prompts.py  reactions.py  schema.py  schema_advisor.py  search.py  time_utils.py  tweets.py
twag/fetcher/: __init__.py  bird_cli.py  extractors.py
twag/models/: __init__.py  api.py  config.py  db_models.py  links.py  media.py  scoring.py  taxonomy.py  tweet.py
twag/processor/: __init__.py  dependencies.py  pipeline.py  storage.py  triage.py
twag/scorer/: __init__.py  diff_prompt.py  llm_client.py  prompts.py  scoring.py
twag/web/: __init__.py  app.py  tweet_utils.py
twag/web/frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
twag/web/frontend/src/: App.tsx  main.tsx
twag/web/frontend/src/api/: client.ts  context.ts  prompts.ts  reactions.ts  tweets.ts  types.ts
twag/web/frontend/src/components/context/: CommandForm.tsx  CommandList.tsx  CommandTest.tsx  ContextPage.tsx
twag/web/frontend/src/components/feed/: FeedPage.tsx  QuoteBlock.tsx  ReactionModal.tsx  ScoreBadge.tsx  TweetActions.tsx  TweetCard.tsx  TweetContent.tsx  TweetMedia.tsx  articleVisuals.ts
twag/web/frontend/src/components/layout/: AppShell.tsx  FilterBar.tsx
twag/web/frontend/src/components/prompts/: PromptEditor.tsx  PromptHistory.tsx  PromptsPage.tsx  TuningSuggestion.tsx
twag/web/frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  skeleton.tsx  switch.tsx  textarea.tsx  toaster.tsx  tooltip.tsx
twag/web/frontend/src/hooks/: use-categories.ts  use-context-commands.ts  use-filter-state.ts  use-prompts.ts  use-reactions.ts  use-tweets.ts
twag/web/frontend/src/lib/: utils.ts
twag/web/frontend/src/styles/: globals.css
twag/web/routes/: __init__.py  context.py  metrics.py  prompts.py  reactions.py  tweets.py
twag/web/static/: app.css  drawer.js  modal.js
twag/web/templates/: base.html  context.html  feed.html  prompts.html
twag/web/templates/partials/: tweet_detail.html  tweets.html
