[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twag"
version = "0.1.0"
description = "Twitter aggregator for market-relevant signals"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Clifton King", email = "clifton@example.com"},
]
keywords = ["twitter", "x", "aggregator", "market", "finance", "signals", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "click>=8.1.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "tabulate>=0.9.0",
]

[project.scripts]
twag = "twag.cli:cli"

[project.urls]
Homepage = "https://github.com/clifton/twag"
Repository = "https://github.com/clifton/twag"
Issues = "https://github.com/clifton/twag/issues"

[tool.hatch.build.targets.wheel]
packages = ["twag"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
